// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonLink can be presented as one of the allowed fullwidth 1`] = `
<a
  class="sc-beqWaB sc-dmqHEX iJOUxQ jurAgY"
>
  Go home
</a>
`;

exports[`ButtonLink can be presented as one of the allowed variants 1`] = `
<a
  class="sc-beqWaB sc-dmqHEX etEeBB bKoOYO"
>
  Go home
</a>
`;

exports[`ButtonLink can be presented as one of the allowed variants 2`] = `
<a
  class="sc-beqWaB sc-dmqHEX jBYQfy kSGpGF"
>
  Go home
</a>
`;

exports[`ButtonLink renders 1`] = `
<a
  class="sc-beqWaB sc-dmqHEX iJOUxQ EskLT"
>
  Go home
</a>
`;
